--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  height: 40vh;
 }
 
 input {
@@ -47,9 +48,10 @@ p {
   background-repeat: no-repeat;
   font-weight: 900;
   letter-spacing: 1.2px;
+  color: white;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1024px) {
   body {
     height: 100vh;
   }
