--- a/style.css
+++ b/style.css
@@ -16,6 +16,18 @@ input {
   height: 2.2rem;
   border-radius: 0.5rem;
 }
+
+.all-items{
+  background: rgba(100, 100, 197, 0.8);
+  width: 50%;
+  padding: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 2rem;
+  border: 2px solid white;
+}
 p {
   font-size: 14px;
 }
@@ -59,6 +71,11 @@ p {
   .container {
     height: 55vh;
   }
+
+  .all-items{
+    width: 100%;
+  }
+
   p {
     font-size: 1.6rem;
   }
@@ -69,6 +86,9 @@ p {
   }
   .container {
     height: 42vh;
+  }
+  .all-items{
+    width: 80vw;
   }
   p {
     display: inline-block;
